2004-07-19  Johan Dahlin  <johan@gnome.org>

	* gobject/Makefile.am: 
	* setup.py:
	* makefile.msc: Update, why do I even bother to update 3 different
	build systems?

	* gobject/: Split out GParamSpec, GMainLoop, GMainContext and
	GPointer to separate files. Also remove *.h files and go back to
	the old scheme (everything in pygobject.h)

	* description.py: Remove, out of date since 0.6.x!

	* tests/Makefile.am, tests/common.py: Make distcheck pass

2004-07-18  John Ehresman <jpe@wingide.com>

	* gobject/pygflags.c, gobject/pygenum.c, gobject/gobjectmodule.c
	(initgobject): Remove references to &PyInt_Type from static type
	struct initialization and manually set it before PyType_Ready calls
	
	* makefile.msc, gtk/makefile.msc, gobject/makefile.msc: VC++ makefile
	changes for new directory layout

2004-07-18  Johan Dahlin  <johan@gnome.org>

	* gtk/gtk.override (_wrap_gtk_action_group_add_radio_actions) 
	(_wrap_gtk_action_group_add_toggle_actions) 
	(_wrap_gtk_action_group_add_actions): Add optional user_data argument.

	* gobject/pygflags.c (pyg_flags_get_value_nicks) 
	(pyg_flags_get_value_names): New getters

	* gobject/pygenum.c (pyg_enum_get_value_nick) 
	(pyg_enum_get_value_name): New getters

	* gobject/gobjectmodule.c (pyg_param_spec_getattr): add enum_class
	and flags_class properties.

2004-07-18  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gtk.defs (gtk_combo_new): Add deprectation warning.
	(gtk_item_factory_new): idem.
	(gtk_list_item_new): idem.
	(gtk_list_item_new_with_label): idem.
	(gtk_option_menu_new): idem.

	* gtk/gtkclist.override (_wrap_gtk_clist_new_with_titles): Give
	deprecation warning.

	* gtk/gtkctree.override (_wrap_gtk_ctree_new_with_titles): Give
	deprecation warning.

	* gtk/gtk.defs (plug_new_for_display): Deprecate, since the
	regular gtk.Plug constructor can accept a GdkDisplay now.

	* gtk/gtk.override (_wrap_gtk_plug_new): Override constructor,